--- a/summaries/summary8C_contact_expression.Rmd
+++ b/summaries/summary8C_contact_expression.Rmd
@@ -497,7 +497,7 @@ df3 <- data.frame(a = rep(c(2.1, 2.1, 2.9, 2.9),4)+bar_p, b = c(5.3, 5.5, 5.5, 5
 increm <- c()
 for(i in seq(1,12,3)){increm <- append(increm,rep(i,3))}
 ggplot(comp_lines)+geom_boxplot(aes(x=paste(cell.line,gentype,sep="_"),y=log10(expression),fill=cell.line))+
-  scale_x_discrete(labels=rep(lincnames[c(1,3,2)],4)) +
+  scale_x_discrete(labels=rep(pcnames[c(1,3,2)],4)) +
   theme_bw()+xlab("Gene class")+ylab("Log10 expression")+theme(axis.text.x = element_text(angle = 90, hjust = 1))+
   annotate(geom = 'text',x=rep(c(0.5,1,1.5),4)+increm, y=rep(c(6.7,7.7,5.7),4),label=wilcox_p$pval, size=2)+
   geom_line(data = df1[1:5,], aes(x = a, y = b)) +
