--- a/summaries/latex/Virginie_template.tex
+++ b/summaries/latex/Virginie_template.tex
@@ -111,7 +111,7 @@ Understanding the basic mechanisms which induce hypermutation can improve the de
 \end{multicols}
 \begin{figure}[b]
 	\centering
-	\includegraphics[width=0.7\textwidth]{Images/Topology.JPG}
+	%\includegraphics[width=0.7\textwidth]{Images/Topology.JPG}
 	% width >> % de la largeur du texte
 	\caption{Topology of neoplasmic clonal evolution}
 	\label{Topology}
@@ -138,7 +138,7 @@ The first approach is to enhance the mutation rate in each individual cell accor
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.6\textwidth]{Images/graphic_representation.png}
+	%\includegraphics[width=0.6\textwidth]{Images/graphic_representation.png}
 	% width >> % de la largeur du texte
 	\caption{Graphic representation of the mutation rate and the fitness boosts. }
 	\label{Graphic}
@@ -354,83 +354,83 @@ This First Step Project was supervised by Franck Raynaud and Giovanni Ciriello f
 %\thispagestyle{empty}
 \begin{figure}
 	%\centering
-	\includegraphics[width=1\textwidth]{Images/Total_clones.png}
+	%\includegraphics[width=1\textwidth]{Images/Total_clones.png}
 	\caption{Total number of clones - ln transformation}
 	\label{Total clones}
 \end{figure}
 \begin{figure}
 	%\centering
-	\includegraphics[width=1\textwidth]{Images/Total_leaves.png}
+	%\includegraphics[width=1\textwidth]{Images/Total_leaves.png}
 	\caption{Total number of leaves - ln transformation}
 	\label{Total leaves}
 \end{figure}
 \newpage
 \begin{figure}
 	%\centering
-	\includegraphics[width=1\textwidth]{Images/Total_clones_wo_unic_leaves.png}
+	%\includegraphics[width=1\textwidth]{Images/Total_clones_wo_unic_leaves.png}
 	\caption{Total number of clones without unicellular leaves - ln transformation}
 	\label{Total clones wo unic leaves}
 \end{figure}
 
 \begin{figure}
 	%\centering
-	\includegraphics[width=1\textwidth]{Images/Total_unic_leaves.png}
+	%\includegraphics[width=1\textwidth]{Images/Total_unic_leaves.png}
 	\caption{Total number of unicellular leaves - ln transformation}
 	\label{Total unic leaves}
 \end{figure}
 \newpage
 \begin{figure}
 	%\centering
-	\includegraphics[width=1\textwidth]{Images/Clones.png}
+	%\includegraphics[width=1\textwidth]{Images/Clones.png}
 	\caption{Number of clones in pruned trees}
 	\label{Clones}
 \end{figure}
 
 \begin{figure}
 	%\centering
-	\includegraphics[width=1\textwidth]{Images/Leaves.png}
+	%\includegraphics[width=1\textwidth]{Images/Leaves.png}
 	\caption{Number of leaves in pruned trees}
 	\label{Leaves}
 \end{figure}
 \newpage
 \begin{figure}
 	%\centering
-	\includegraphics[width=1\textwidth]{Images/Drivers_clones.png}
+	%\includegraphics[width=1\textwidth]{Images/Drivers_clones.png}
 	\caption{Mean of driver mutations per clones in pruned trees}
 	\label{Drivers per clones}
 \end{figure}
 
 \begin{figure}
 	%\centering
-	\includegraphics[width=1\textwidth]{Images/Total_mut_clones.png}
+	%\includegraphics[width=1\textwidth]{Images/Total_mut_clones.png}
 	\caption{Mean of total mutations per clones in pruned trees}
 	\label{Total per clones}
 \end{figure}
 \newpage
 \begin{figure}
 	%\centering
-	\includegraphics[width=1\textwidth]{Images/Drivers_leaves.png}
+	%\includegraphics[width=1\textwidth]{Images/Drivers_leaves.png}
 	\caption{Mean of driver mutations per leaves in pruned trees}
 	\label{Drivers per leaves}
 \end{figure}
 
 \begin{figure}
 	%\centering
-	\includegraphics[width=1\textwidth]{Images/Total_mut_leaves.png}
+	%\includegraphics[width=1\textwidth]{Images/Total_mut_leaves.png}
 	\caption{Mean of total mutations per leaves in pruned trees}
 	\label{Total per leaves}
 \end{figure}
 \newpage
 \begin{figure}
 	%\centering
-	\includegraphics[width=1\textwidth]{Images/Drivers.png}
+	%\includegraphics[width=1\textwidth]{Images/Drivers.png}
 	\caption{Number of driver mutations in pruned trees}
 	\label{Drivers unique}
 \end{figure}
 
 \begin{figure}
 	%\centering
-	\includegraphics[width=1\textwidth]{Images/Total.png}
+	%\includegraphics[width=1\textwidth]{Images/Total.png}
 	\caption{Number of total mutations in pruned trees}
 	\label{Total unique}
 \end{figure}
@@ -442,7 +442,7 @@ This First Step Project was supervised by Franck Raynaud and Giovanni Ciriello f
 \begin{landscape}
 \begin{figure}
 	\centering
-	\includegraphics[width=1.4\textwidth]{Images/Recap.png}
+	%\includegraphics[width=1.4\textwidth]{Images/Recap.png}
 	%\caption{Summary}
 	\captionof{table}{Summary}
 	\label{Recap}
@@ -459,28 +459,28 @@ This First Step Project was supervised by Franck Raynaud and Giovanni Ciriello f
 \fancyhfoffset[L]{-50pt}
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=1\textwidth]{Images/Boost10b.png}
+	%\includegraphics[width=1\textwidth]{Images/Boost10b.png}
 	\caption{Distribution boost $10x$}
 	\label{Boost 10}
 \end{figure}
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=1\textwidth]{Images/Boost100b.png}
+	%\includegraphics[width=1\textwidth]{Images/Boost100b.png}
 	\caption{Distribution boost $100x$}
 	\label{Boost 100}
 \end{figure}
 \newpage
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=1\textwidth]{Images/Boost10pruned.png}
+	%\includegraphics[width=1\textwidth]{Images/Boost10pruned.png}
 	\caption{Distribution boost $10x$ in pruned trees}
 	\label{Boost 10 pruned}
 \end{figure}
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=1\textwidth]{Images/Boost100pruned.png}
+	%\includegraphics[width=1\textwidth]{Images/Boost100pruned.png}
 	\caption{Distribution boost $100x$ in pruned trees}
 	\label{Boost 100 pruned}
 \end{figure}
